# spotube

./: flutter_rust_bridge.yaml  pubspec.yaml
lib/: main.dart
lib/collections/: fake.dart  routes.gr.dart
lib/components/dialogs/: replace_downloaded_dialog.dart  track_details_dialog.dart
lib/components/heart_button/: heart_button.dart  use_track_toggle_like.dart
lib/components/playbutton_view/: playbutton_tile.dart
lib/components/track_presentation/: presentation_actions.dart  presentation_list.dart  presentation_props.dart  presentation_state.dart  presentation_top.dart
lib/components/track_tile/: track_options.dart  track_tile.dart
lib/hooks/configurators/: use_deep_linking.dart  use_endless_playback.dart
lib/hooks/utils/: use_brightness_value.dart  use_palette_color.dart
lib/models/connect/: connect.freezed.dart  load.dart  ws_event.dart
lib/models/metadata/: artist.dart  audio_source.dart  browse.dart  image.dart  metadata.dart  metadata.freezed.dart  metadata.g.dart  pagination.dart  track.dart
lib/models/playback/: track_sources.g.dart
lib/modules/album/: album_card.dart
lib/modules/metadata_plugins/: installed_plugin.dart
lib/modules/player/: player.dart  player_actions.dart  sibling_tracks_sheet.dart
lib/modules/playlist/: playlist_card.dart
lib/pages/album/: album.dart
lib/pages/lyrics/: mini_lyrics.dart
lib/pages/playlist/: liked_playlist.dart  playlist.dart
lib/pages/settings/: metadata_plugins.dart
lib/pages/track/: track.dart
lib/provider/: download_manager_provider.dart
lib/provider/audio_player/: audio_player.dart  audio_player_streams.dart  querying_track_info.dart  state.dart
lib/provider/connect/: connect.dart
lib/provider/local_tracks/: local_tracks_provider.dart
lib/provider/metadata_plugin/: metadata_plugin_provider.dart
lib/provider/scrobbler/: scrobbler.dart
lib/provider/server/: active_track_sources.dart  router.dart  (+2 more)
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs  main.rs
rust/src/api/: mod.rs
rust/src/api/host_api/: webview.rs
rust/src/api/plugin/: commands.rs  event_loop.rs  executors.rs  mod.rs  plugin.rs  senders.rs
rust/src/api/plugin/models/: album.rs  artist.rs  audio_source.rs  auth.rs  browse.rs  core.rs  image.rs  mod.rs  pagination.rs  playlist.rs  search.rs  track.rs  user.rs
rust/src/internal/: album.rs  artist.rs  audio_source.rs  auth.rs  browse.rs  core.rs  mod.rs  playlist.rs  search.rs  track.rs  user.rs  utils.rs
rust/src/internal/apis/: event_source.rs  fetcher.rs  form.rs  local_storage.rs  mod.rs  timezone.rs  webview.rs  yt_engine.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_spotube.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_spotube.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+101 files in other folders)
