[package]
name = "rust_lib_spotube"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "spotube"
path = "src/main.rs"

[dependencies]
flutter_rust_bridge = "=2.11.1"
boa_engine = "0.21.0"
boa_runtime = "0.21.0"
boa_gc = "0.21.0"
anyhow = "1"
reqwest = { version = "0.12.x" }
http = { version = "1.3.1" }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
rquickjs = { version = "0", features = ["chrono", "futures"] }
tokio = { version = "1.48.0", features = ["full"] }
heck = "0.5.0"
futures-concurrency = "7.6.3"
futures-lite = "2.6.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
