[package]
name = "rust_lib_spotube"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "spotube"
path = "src/main.rs"

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
rquickjs = { version = "0", features = ["chrono", "futures"] }
tokio = { version = "1.48.0", features = ["full"] }
heck = "0.5.0"
llrt_modules = { git = "https://github.com/awslabs/llrt.git", rev = "7d749dd18cf26a2e51119094c3b945975ae57bd4", features = ["abort", "buffer", "console", "crypto", "events", "exceptions", "fetch", "navigator", "url", "timers"] }

[patch."https://github.com/DelSkayn/rquickjs"]
rquickjs = "0.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
