[package]
name = "rust_lib_spotube"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "spotube"
path = "src/main.rs"

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
rquickjs = { version = "0", features = ["chrono", "futures", "macro", "classes", "bindgen"] }
tokio = { version = "1.48.0", features = ["full"] }
heck = "0.5.0"
# temporarily using a fork until PR is merged: https://github.com/awslabs/llrt/pull/1275
#llrt_modules = { git = "https://github.com/awslabs/llrt.git", rev = "7d749dd18cf26a2e51119094c3b945975ae57bd4", features = ["abort", "buffer", "console", "crypto", "events", "exceptions", "fetch", "navigator", "url", "stream-web", "timers"] }
llrt_modules = { git = "https://github.com/chessbyte/awslabs-llrt.git", branch = "feat/fetch-body-streams", features = ["abort", "buffer", "console", "crypto", "events", "exceptions", "fetch", "navigator", "url", "stream-web", "timers"] }
eventsource-client = "0.15.1"
reqwest = { version = "0.12", features = ["json"] }
confy = "2.0.0"
chrono-tz = "0.10"
iana-time-zone = "0.1"
base64 = "0.22.1"
openssl = "0.10.75"

[patch."https://github.com/DelSkayn/rquickjs"]
rquickjs = "0.10.0"
[path.crates-io]
rquickjs = "0.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
